force-app/main/default/objects/RFQ__c/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <label>Delivery Terms (Incoterms)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>EXW</fullName><default>false</default><label>EXW — Ex Works</label></value>
            <value><fullName>FCA</fullName><default>false</default><label>FCA — Free Carrier</label></value>
            <value><fullName>FOB</fullName><default>false</default><label>FOB — Free On Board</label></value>
            <value><fullName>CIF</fullName><default>false</default><label>CIF — Cost, Insurance &amp; Freight</label></value>
            <value><fullName>DAP</fullName><default>false</default><label>DAP — Delivered at Place</label></value>
            <value><fullName>DDP</fullName><default>false</default><label>DDP — Delivered Duty Paid</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>