force-app/main/default/objects/RFQ__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>RFQs Issued</relationshipLabel>
    <relationshipName>RFQs_Issued</relationshipName>
    <type>Lookup</type>
</CustomField>