force-app/main/default/objects/RFQ__c/fields/Material_Request__c.field-meta.xml
<CustomField>
    <fullName>Material_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Request</label>
    <referenceTo>Material_Request__c</referenceTo>
    <relationshipLabel>RFQs</relationshipLabel>
    <relationshipName>RFQs</relationshipName>
    <type>Lookup</type>
</CustomField>