force-app/main/default/objects/RFQ__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Advance</fullName><default>false</default><label>100% Advance</label></value>
            <value><fullName>Net30</fullName><default>false</default><label>Net 30 Days</label></value>
            <value><fullName>Net60</fullName><default>false</default><label>Net 60 Days</label></value>
            <value><fullName>Net90</fullName><default>false</default><label>Net 90 Days</label></value>
            <value><fullName>LC</fullName><default>false</default><label>Letter of Credit</label></value>
            <value><fullName>Milestone</fullName><default>false</default><label>Milestone-based</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>