force-app/main/default/objects/RFQ__c/fields/Scope_of_Supply__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Supply__c</fullName>
    <label>Scope of Supply</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>