force-app/main/default/objects/RFQ__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent to Vendor</label></value>
            <value><fullName>Quoted</fullName><default>false</default><label>Quote Received</label></value>
            <value><fullName>Awarded</fullName><default>false</default><label>Awarded</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>